--- a/less/front.less
+++ b/less/front.less
@@ -1,13 +1,18 @@
 @import "elements.less";
+@import "mixins.less";
+@import "variables.less";
+
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 	line-height: 1.3em;
 }
 
 #header {
-	background: #222222;
+	background: #222222 url('../img/header_bg.png');
+	background-size: cover;
+	border-top: 3px solid #43daff;
 	text-align: center;
-	padding: 30px 0;
+	padding: 50px 0;
 	ul {
 		list-style: none;
 		margin: 0 0 20px;
@@ -19,20 +24,54 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 		margin: 0 10px;
 	}
 	h1 {
-		font-size: 48px;
-		color: #f3f3f3;
-		font-weight: normal;
+		display: none;
 	}
 	h2 {
-		font-size: 24px;
+		font-size: 18px;
 		color: #666666;
 		font-weight: normal;
 	}
+	.izquierda,
+	.derecha {
+		font-family: 'Pathway Gothic One', sans-serif;
+		color: #888888;
+		letter-spacing: 2px;
+		text-transform: uppercase;
+		border-top: 1px solid #333333;
+		border-bottom: 1px solid #333333;
+		padding: 15px 0;
+		font-size: 16px;
+		margin-top: 30px;
+	}
+	.izquierda { padding-left: 20px; }
+	.derecha { padding-left: 20px; }
+	@media (min-width: @screen-lg) {
+		.izquierda {
+			margin-top: 40px;
+			margin-right: -50px;
+		}
+		.derecha {
+			margin-top: 40px;
+			margin-left: -50px;
+		}
+	}
+	@media (min-width: @screen-md) {
+		padding: 80px 0;
+	}
 }
+
+#logo img {
+	width: 400px;
+	height: auto;
+	margin-bottom: 20px;
+	max-width: 100%;
+}
+
 
 #ponentes {
 	padding: 50px 0;
 	background: #f3f3f3;
+	border-bottom: 1px solid #ededed;
 	.ponente {
 		padding-left: 180px;
 	}
@@ -62,4 +101,17 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 #lugar {
 	padding: 50px 0;
 	background: #f3f3f3;
+	border-top: 1px solid #ededed;
+}
+
+#participar {
+	background: #444444;
+	color: #ededed;
+	padding: 40px 0;
+}
+
+#footer {
+	background: #222222;
+	color: #ededed;
+	padding: 40px 0;
 }
