--- a/templates/index.html
+++ b/templates/index.html
@@ -60,9 +60,9 @@
 
 			<div class="container">
 				<div class="row">
-					<div class="col-md-6">
+					<div class="col-md-5">
 
-						<div class="ponente" itemscope itemtype="http://schema.org/Person">
+						<div class="ponente izquierda" itemscope itemtype="http://schema.org/Person">
 							<img class="foto" src="img/ponentes/heisenberg.png" itemprop="image" />
 							<h2>Preprocesadores CSS: LESS y SASS</h2>
 							<p class="descripcion">Descripción de qué tratará la charla, su contenido y finalidad.</p>
@@ -72,9 +72,12 @@
 						</div>
 
 					</div>
-					<div class="col-md-6">
+					<div class="col-md-2">
+						<div id="y"><div>&</div></div>
+					</div>
+					<div class="col-md-5">
 
-						<div class="ponente" itemscope itemtype="http://schema.org/Person">
+						<div class="ponente derecha" itemscope itemtype="http://schema.org/Person">
 							<img class="foto" src="img/ponentes/saul.png" itemprop="image" />
 							<h2>Introducción a Node.js</h2>
 							<p class="descripcion">Otra descripción, de la segunda charla. Herpy derp, it's better call Saul.</p>
