--- a/templates/index.html
+++ b/templates/index.html
@@ -139,6 +139,7 @@
 							<span class="nowrap" itemprop="addressLocality">Malgrat de Mar</span>,
 							<span itemprop="addressRegion">Barcelona</span>
 						</p>
+						<p>La durada aproximada será de dos horas y media.</p>
 
 					</div>
 				</div>
@@ -149,9 +150,38 @@
 		<iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.es/maps?ie=UTF8&amp;ll=41.649395,2.746711&amp;spn=0.012987,0.023754&amp;t=m&amp;z=16&amp;output=embed"></iframe>
 
 		<section id="participar">
+
+			<h1 class="section-header">Cómo participar</h1>
+
 			<div class="container">
 
-				Derp. Cómo participar.
+				<!-- General -->
+				<div class="col-md-4">
+					<h4>En general</h4>
+					<p>El evento y su contenido está orientado a desarrolladores web: programadores, diseñadores, etc. Pero cualquier persona puede asistir y participar.</p>
+					<p>También, si quieres ayudar con la organización, ponte en contacto por Twitter con <a href="http://twitter.com/jeroen_bz">@jeroen_bz</a>.</p>
+				</div>
+				<div class="col-md-4">
+					<h4>Dar una charla</h4>
+					<p>Si quieres dar una charla te damos los siguientes consejos para que la estructures:</p>
+					<ul>
+						<li>Derp derp.</li>
+						<li>Derp derp.</li>
+						<li>Derp derp.</li>
+						<li>Derp derp.</li>
+					</ul>
+				</div>
+				<div class="col-md-4">
+					<h4>Presentar un proyecto</h4>
+					<p>Puedes presentar un proyecto propio, ya sea una herramienta o un servicio. Lo único importante es que esté terminado o en beta (funcional).</p>
+					<p>La presentación debería contener los siguientes apartados, como creas conveniente:</p>
+					<ul>
+						<li>Cómo surgió y se planificó todo.</li>
+						<li>Qué tecnologías se han usado (lenguajes, frameworks, librerías, APIs).</li>
+						<li>Qué problemas surgieron y qué se hizo al respecto.</li>
+						<li>Conclusiones finales y cosas aprendidas por el camino.</li>
+					</ul>
+				</div>
 
 			</div>
 		</section>
