--- a/less/front.less
+++ b/less/front.less
@@ -12,6 +12,7 @@ a {
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 	line-height: 1.3em;
+	font-weight: normal;
 }
 
 ul {
@@ -128,8 +129,8 @@ li {
 
 #ponentes {
 	padding: 50px 0;
-	background: #f3f3f3;
-	border-bottom: 1px solid #ededed;
+	background: #eeeeee;
+	border-bottom: 1px solid #e1e1e1;
 	.ponente {
 		&.izquierda {
 			text-align: right;
@@ -207,15 +208,31 @@ li {
 }
 
 #participar {
-	background: #444444;
-	color: #dedede;
-	padding: 40px 0;
+	background: #222222;
+	color: #bbbbbb;
+	padding: 50px 0;
+	text-align: center;
+	.icono {
+		width: 100px;
+		height: auto;
+	}
 	a {
-		color: #fcd6b0;
+		color: @azul;
+	}
+	p,
+	li {
+		text-align: left;
+	}
+	.columna {
+		padding: 0 30px;
+		margin-bottom: 30px;
 	}
 	h4 {
 		font-family: 'Pathway Gothic One', sans-serif;
+		color: #ffffff;
 		font-size: 24px;
+		text-align: center;
+		margin-bottom: 20px;
 	}
 	.section-header {
 		color: #ffffff;
@@ -227,7 +244,7 @@ li {
 }
 
 #footer {
-	background: #222222;
+	background: #333333;
 	color: #ededed;
 	padding: 40px 0;
 }
