--- a/templates/index.html
+++ b/templates/index.html
@@ -156,22 +156,26 @@
 			<div class="container">
 
 				<!-- General -->
-				<div class="col-md-4">
+				<div class="columna col-md-4">
+					<img class="icono" src="img/iconos/general.png" alt="">
 					<h4>En general</h4>
 					<p>El evento y su contenido está orientado a desarrolladores web: programadores, diseñadores, etc. Pero cualquier persona puede asistir y participar.</p>
-					<p>También, si quieres ayudar con la organización, ponte en contacto por Twitter con <a href="http://twitter.com/jeroen_bz">@jeroen_bz</a>.</p>
+					<p>La idea es que el ambiente sea informal y familiar, manteniendo el aforo relativamente reducido por el momento (15-20 personas).</p>
+					<p>Si quieres ayudar con la organización, ponte en contacto por Twitter con <a href="http://twitter.com/jeroen_bz">@jeroen_bz</a>.</p>
 				</div>
-				<div class="col-md-4">
+				<div class="columna col-md-4">
+					<img class="icono" src="img/iconos/charla.png" alt="">
 					<h4>Dar una charla</h4>
-					<p>Si quieres dar una charla te damos los siguientes consejos para que la estructures:</p>
+					<p>Si quieres dar una charla te damos los siguientes consejos para que la prepares bien:</p>
 					<ul>
-						<li>Derp derp.</li>
-						<li>Derp derp.</li>
-						<li>Derp derp.</li>
-						<li>Derp derp.</li>
+						<li>Dispones de 30 minutos para dar la charla y 5-10 para posibles preguntas.</li>
+						<li>No recargues mucho las diapositivas para que los de la última fila puedan leer el texto sin problemas.</li>
+						<li>No confíes ciegamente en que haya conexión a internet (que tu charla no dependa de eso).</li>
+						<li>Al principio siempre cuesta. Tómatelo con calma y pásatelo bien.</li>
 					</ul>
 				</div>
-				<div class="col-md-4">
+				<div class="columna col-md-4">
+					<img class="icono" src="img/iconos/proyecto.png" alt="">
 					<h4>Presentar un proyecto</h4>
 					<p>Puedes presentar un proyecto propio, ya sea una herramienta o un servicio. Lo único importante es que esté terminado o en beta (funcional).</p>
 					<p>La presentación debería contener los siguientes apartados, como creas conveniente:</p>
