--- a/less/front.less
+++ b/less/front.less
@@ -213,8 +213,9 @@ li {
 	padding: 50px 0;
 	text-align: center;
 	.icono {
-		width: 100px;
+		width: 50px;
 		height: auto;
+		margin: 10px 0;
 	}
 	a {
 		color: @azul;
@@ -224,7 +225,7 @@ li {
 		text-align: left;
 	}
 	.columna {
-		padding: 0 30px;
+		padding: 0 40px;
 		margin-bottom: 30px;
 	}
 	h4 {
