--- a/css/style.css
+++ b/css/style.css
@@ -7046,8 +7046,9 @@ li {
   text-align: center;
 }
 #participar .icono {
-  width: 100px;
+  width: 50px;
   height: auto;
+  margin: 10px 0;
 }
 #participar a {
   color: #43daff;
@@ -7057,7 +7058,7 @@ li {
   text-align: left;
 }
 #participar .columna {
-  padding: 0 30px;
+  padding: 0 40px;
   margin-bottom: 30px;
 }
 #participar h4 {
