--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,6 @@
 @azul: #43daff;
 @fc-link: #36b2d1;
+@fc-link-shadow: darken(@fc-link, 35%);
 
 // Media queries breakpoints
 // --------------------------------------------------
