--- a/less/front.less
+++ b/less/front.less
@@ -247,5 +247,18 @@ li {
 #footer {
 	background: #333333;
 	color: #ededed;
-	padding: 40px 0;
+	padding: 40px 0 70px;
+}
+
+#newsletter {
+	.correo {
+		border: 0;
+		background: #222222;
+		color: #ededed;
+	}
+	.btn {
+		background: @fc-link;
+		color: #ffffff;
+		text-shadow: 0 1px 2px @fc-link-shadow;
+	}
 }
