--- a/less/front.less
+++ b/less/front.less
@@ -61,10 +61,6 @@ li {
 		padding: 0;
 		display: inline-block;
 	}
-	li {
-		float: left;
-		margin: 0 10px;
-	}
 	h1 {
 		display: none;
 	}
@@ -74,7 +70,8 @@ li {
 		font-weight: normal;
 	}
 	.izquierda,
-	.derecha {
+	.derecha,
+	.sub-header {
 		font-family: 'Pathway Gothic One', sans-serif;
 		color: #888888;
 		letter-spacing: 2px;
@@ -105,17 +102,45 @@ li {
 #logo img {
 	width: 400px;
 	height: auto;
-	margin-bottom: 20px;
 	max-width: 100%;
+	@media (min-width: @screen-md) {
+		margin-bottom: 20px;
+	}
 }
 
+#menu {
+	font-family: 'Pathway Gothic One', sans-serif;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	background: rgba(0, 0, 0, 0.3);
+	margin-bottom: 40px;
+	margin-top: -30px;
+	ul {
+		display: block;
+		overflow: hidden;
+		text-align: center;
+		margin-bottom: 0;
+		list-style: none;
+		padding: 0;
+	}
+	li {
+		display: inline-block;
+		margin: 0 10px;
+	}
+	a {
+		display: inline-block;
+		color: #ffffff;
+		padding: 0;
+		margin: 15px 0;
+	}
+}
 
 #y {
 	text-align: center;
 	div {
 		background: @azul;
 		color: #ffffff;
-		margin-top: 50px;
+		margin-top: 45px;
 		display: inline-block;
 		padding: 10px;
 		line-height: 1em;
@@ -132,25 +157,47 @@ li {
 	background: #eeeeee;
 	border-bottom: 1px solid #e1e1e1;
 	.ponente {
+
+		&.derecha,
 		&.izquierda {
-			text-align: right;
-			padding-right: 180px;
-			margin-right: -30px;
+			padding-left: 120px;
+			margin-bottom: 40px;
 			.foto {
-				margin-right: -180px;
-				float: right;
+				margin-left: -120px;
+				float: left;
+				width: 100px;
+			}
+			@media (min-width: @screen-sm) {
+				padding-left: 180px;
+				margin-bottom: 40px;
+				.foto {
+					margin-left: -180px;
+					width: auto;
+				}
 			}
 		}
-		&.derecha {
-			padding-left: 180px;
-			margin-left: -30px;
-			.foto {
-				margin-left: -180px;
-				float: left;
+
+
+		@media (min-width: @screen-md) {
+			&.derecha {
+				margin-left: -30px;
+			}
+			&.izquierda {
+				text-align: right;
+				padding-right: 180px;
+				margin-right: -30px;
+				margin-left: 0;
+				padding-left: 0;
+				.foto {
+					margin-right: -180px;
+					margin-left: 0;
+					float: right;
+				}
 			}
 		}
 	}
 	.foto {
+		margin-top: 5px;
 		.rounded(5px);
 	}
 	h2 {
@@ -168,15 +215,41 @@ li {
 }
 
 
-#proyectos {
+#proyecto {
 	padding: 50px 0;
-	h2 {
-		font-family: 'Pathway Gothic One', sans-serif;
-		font-size: 28px;
+	.proyecto {
+		padding-left: 120px;
+		margin-bottom: 40px;
+		h2 {
+			font-family: 'Pathway Gothic One', sans-serif;
+			font-size: 28px;
+		}
+		.logo {
+			width: 100px;
+			height: auto;
+			float: left;
+			margin-left: -120px;
+		}
 	}
-	.logo {
-		width: 200px;
-		height: auto;
+
+	@media (min-width: @screen-sm) {
+		.proyecto {
+			padding-left: 180px;
+			.logo {
+				margin-left: -180px;
+				width: 150px;
+			}
+		}
+	}
+
+	@media (min-width: @screen-md) {
+		.proyecto {
+			padding-left: 230px;
+			.logo {
+				margin-left: -230px;
+				width: 200px;
+			}
+		}
 	}
 }
 
@@ -184,10 +257,8 @@ li {
 #lugar {
 	padding: 50px 0;
 	font-size: 18px;
-	//background: #f3f3f3;
 	background: @azul;
 	color: #11829d;
-	//border-top: 1px solid #ededed;
 	a {
 		color: #00667f;
 		font-weight: bold;
@@ -204,6 +275,15 @@ li {
 		text-transform: uppercase;
 		font-size: 48px;
 		line-height: 1em;
+		text-align: right;
+	}
+	@media (max-width: @screen-md) {
+		text-align: center;
+		.fecha {
+			text-align: center;
+			margin-bottom: 20px;
+			font-size: 36px;
+		}
 	}
 }
 
@@ -225,8 +305,11 @@ li {
 		text-align: left;
 	}
 	.columna {
-		padding: 0 40px;
 		margin-bottom: 30px;
+		padding: 0 30px;
+		@media (min-width: @screen-lg) {
+			padding: 0 40px;
+		}
 	}
 	h4 {
 		font-family: 'Pathway Gothic One', sans-serif;
