--- a/less/front.less
+++ b/less/front.less
@@ -152,6 +152,13 @@ li {
 	}
 }
 
+#proximamente {
+	padding: 50px 30px;
+	font-size: 16px;
+	color: #aaaaaa;
+	text-align: center;
+}
+
 #ponentes {
 	padding: 50px 0;
 	background: #eeeeee;
@@ -331,6 +338,51 @@ li {
 	background: #333333;
 	color: #ededed;
 	padding: 40px 0 70px;
+	h4 {
+		font-family: 'Pathway Gothic One', sans-serif;
+		color: #888888;
+		font-size: 18px;
+		margin-bottom: 10px;
+	}
+}
+
+#social {
+	list-style: none;
+	margin: 0 0 20px;
+	padding: 0;
+	overflow: hidden;
+	li {
+		float: left;
+		padding: 0;
+		margin: 0 10px 10px 0;
+	}
+	img {
+		width: 32px;
+		height: 32px;
+	}
+}
+
+#techs {
+	list-style: none;
+	margin: 0 0 40px;
+	padding: 0;
+	overflow: hidden;
+	li {
+		float: left;
+		padding: 0;
+		margin: 0 10px 10px 0;
+	}
+	a {
+		display: block;
+		padding: 10px;
+		line-height: 1em;
+		background: #584c35;
+		color: #b69d6d;
+		&:hover {
+			color: #ffffff;
+			text-decoration: none;
+		}
+	}
 }
 
 #newsletter {
