--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="">
-		<meta name="author" content="">
-		<!--<link rel="shortcut icon" href="../../assets/ico/favicon.png">-->
+		<meta name="description" content="Reunión mensual de desarrolladores y diseñadores web con ganas de compartir conocimientos y estar al día con las últimas tecnologías, técnicas y metodologías.">
+		<meta name="author" content="Jeroen van Meerendonk">
+		<link rel="shortcut icon" href="favicon.png">
 
-		<title>Evento</title>
+		<title>Coding Fridays</title>
 
 		<link href='http://fonts.googleapis.com/css?family=Pathway+Gothic+One' rel='stylesheet' type='text/css'>
 		<!-- @if ENV='dev' -->
@@ -31,10 +31,10 @@
 
 			<div class="container">
 				<nav class="visible-xs" id="menu">
-					<ul><li><a href="#">Ponentes</a></li><li><a href="#">Proyectos</a></li><li><a href="#">Dónde</a></li><li><a href="#">Participar</a></li></ul>
+					<ul><li><a href="#ponentes">Ponentes</a></li><li><a href="#proyecto">Proyecto</a></li><li><a href="#lugar">Dónde</a></li><li><a href="#participar">Participar</a></li></ul>
 				</nav>
 				<div class="row">
-					<div class="col-md-3 visible-md visible-lg"><p class="izquierda text-right">Próximo: 21 de noviembre de 2013</p></div>
+					<div class="col-md-3 visible-md visible-lg"><p class="izquierda text-right">Próximo: Fecha todavía por decidir</p></div>
 					<div class="col-md-6">
 						<div id="logo" class="img-retina"><img src="img/logo.png" class="normal"><img src="img/logo@2x.png" class="retina"></div>
 					</div>
@@ -42,9 +42,9 @@
 				</div>
 				<div class="row">
 					<div class="col-md-offset-2 col-md-8">
-						<h1>Título del evento</h1>
+						<h1>Coding Fridays</h1>
 						<div class="visible-xs visible-sm sub-header">
-							Próximo: 21 de noviembre de 2013<br>
+							Próximo: Fecha a decidir<br>
 							Hospedado (físicamente) por CDmon
 						</div>
 						<h2>Reunión mensual de desarrolladores y diseñadores web con ganas de compartir conocimientos y estar al día con las últimas tecnologías, técnicas y metodologías.</h2>
@@ -54,6 +54,16 @@
 
 		</header>
 
+		<!-- @if CHARLAS='0' -->
+
+		<section id="proximamente">
+			<p>Aquí se mostrará la información sobre las próximas ediciones.</p>
+			<p>Únete a nuestro <a href="https://www.facebook.com/groups/codingfridays/">grupo de Facebook</a> o apúntate a la <a href="#footer">lista de correo</a> para que no se te escape nada.</p>
+		</section>
+
+		<!-- @endif -->
+
+		<!-- @ifndef CHARLAS -->
 
 		<section id="ponentes">
 
@@ -114,6 +124,8 @@
 
 		</section>
 
+		<!-- @endif -->
+
 		<section id="lugar">
 
 			<h1 class="section-header">Dónde se realiza</h1>
@@ -122,8 +134,8 @@
 				<div class="row">
 					<div class="col-lg-4 col-lg-offset-2 col-md-6">
 
-						<a class="ninja" itemprop="url" href="http://urldelevento.com"><span itemprop="name">Nombre chachi</span></a>
-						<p class="fecha"><meta itemprop="startDate" content="2016-04-21T20:00">Viernes 21 de octubre<br>a las 18:00</p>
+						<a class="ninja" itemprop="url" href="http://urldelevento.com"><span itemprop="name">Coding Fridays</span></a>
+						<p class="fecha"><meta itemprop="startDate" content="2016-04-21T20:00">Fecha todavía<br>por decidir</p>
 
 					</div>
 					<div class="col-lg-4 col-md-6" itemprop="location" itemscope itemtype="http://schema.org/Place">
@@ -192,7 +204,21 @@
 			<div class="container">
 
 				<div class="col-md-6">
-					Créditos, tecnologías usadas
+					<h4>En las redes</h4>
+					<ul id="social">
+						<li><a href="https://www.facebook.com/groups/codingfridays"><img src="img/social/facebook.png" alt="Facebook"></a></li>
+						<li><a href="https://github.com/jeroen/codingfridays.com"><img src="img/social/github.png" alt="Github"></a></li>
+						<li><a href="https://twitter.com/codingfridays"><img src="img/social/twitter.png" alt="Twitter"></a></li>
+					</ul>
+
+					<h4>Ingredientes de esta página</h4>
+					<ul id="techs">
+						<li><a href="http://www.w3schools.com/html/html5_intro.asp" title="HTML5">HTML5</a></li>
+						<li><a href="http://www.w3schools.com/css/css3_intro.asp" title="CSS3">CSS3</a></li>
+						<li><a href="http://lesscss.org/" title="LESS">LESS</a></li>
+						<li><a href="http://getbootstrap.com/" title="Twitter Bootstrap">Twitter Bootstrap</a></li>
+						<li><a href="http://gruntjs.com/" title="Grunt.js">Grunt.js</a></li>
+						<li><a href="http://git-scm.com/" title="Git">Git</a></li>
 				</div>
 				<div class="col-md-6" id="newsletter">
 
