Corrige la url de la página de Facebook.

--- a/templates/index.html
+++ b/templates/index.html
@@ -206,7 +206,7 @@
 				<div class="col-md-6">
 					<h4>En las redes</h4>
 					<ul id="social">
-						<li><a href="https://www.facebook.com/groups/codingfridays"><img src="img/social/facebook.png" alt="Facebook"></a></li>
+						<li><a href="https://www.facebook.com/codingfridays"><img src="img/social/facebook.png" alt="Facebook"></a></li>
 						<li><a href="https://github.com/jeroen/codingfridays.com"><img src="img/social/github.png" alt="Github"></a></li>
 						<li><a href="https://twitter.com/codingfridays"><img src="img/social/twitter.png" alt="Twitter"></a></li>
 					</ul>
